--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "$react-dom"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "next": "15.0.1",
     "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-69d4b800-20241021",
